css/civicrm.css
/* ... */
#crm-container table.nestedActivitySelector tr.priority-urgent {         
    background-color: #FFDDDD;
}

#crm-container table.nestedActivitySelector tr.priority-low {
    background-color: #DDFFDD;
}

#crm-container table.nestedActivitySelector tr.status-scheduled {
    color: #006633;   
}

#crm-container table.nestedActivitySelector tr.status-completed {
    color: #333333; 
}

#crm-container table.nestedActivitySelector tr.status-overdue {
    color: #FF0000;
}

#crm-container table.nestedActivitySelector tr a {
    color:  #0066CC;
}

#crm-container #activities-selector tr:hover td, 
#crm-container #activities-selector tr:hover td.sorted,
#crm-container #activities-selector tr.trOver td.sorted, 
#crm-container #activities-selector tr.trOver td
{
    background: transparent;
}

#crm-container span.success-status {
    margin-left: 6px;
    background-color: #ffff99;
    padding: .25em .5em .25em .5em;
    border: 1px solid #696969;
}



/* Styles for Config Task List */
#crm-container td.tasklist a {
    font-weight: bold;
}

#crm-container table.selector td.tasklist {
    border-right: 1px solid #DDDDDD;
    width       : 20%;
}

#crm-container td.tasklist a:link  {
    color: #FF0105;
}

#crm-container td.tasklist a:visited  {
    color: green;
}

/* Styles for Actions Ribbon */
#crm-container .crm-actions-ribbon { margin:0 0 8px 0; }

#crm-container .crm-actions-ribbon ul {
    margin: 0px;
    padding: 0px;
    }

#crm-container .crm-actions-ribbon li {
    float:left;
    margin:0 8px 0 0;
    padding:0px;
    list-style: none;
}

#crm-container .crm-actions-ribbon li.crm-delete-action {
    float:right;
    margin:0px 0px 0px 8px;
}

#crm-container #crm-contact-actions-list li { 
	float:none; 
	padding: 2px 4px;
	margin:0px;
	}

/* Styles for Action Items &  Action Link pop-up */

#crm-container .action-item {
    padding:0px 5px;
    border-left:1px solid #CCC;
    white-space:nowrap;
}
#crm-container .action-item-wrap {
    padding:0px 5px;
    border-left:1px solid #CCC;
    white-space:normal;
}
#crm-container .action-item-first { border-left:none; /* last action item should not have right hand border */}

#crm-container .panel {
    display  : none;
    z-index  : 1;
    position : absolute;
    border-bottom:0px;
    background:transparent url(../i/dropdown-pointer.gif) no-repeat scroll 150px 1px;
    text-align:left;
    padding-top:5px;
    margin: 0px;
    width:180px;
}

#crm-container td ul.panel {
    top:15px;
    right:0px;
}

#crm-container td ul.panel li {
    margin: 0px;
    padding: 2px;
    list-style: none;
    background-image: none;
    width:auto;
}

.btn-slide {
    text-align: left;
    text-decoration: none;
    border: none;
    cursor: pointer;  
    position: relative;
    padding:0px 14px 0 5px;
    background: url("../i/TreePlus.gif") no-repeat right 1px;
    border-left:none;
}

.crm-configure-actions,
.crm-event-participants,
.crm-event-links,
.crm-event-more { min-width:85px; }

#crm-container .panel li a {
    text-decoration: none;
    padding: 4px;
    display: block;
    border:none;
    cursor: pointer;
}

/*Styles for Context menu */

#crm-container .contextMenu,
.crm-contextmenu {
    position   : absolute;
    z-index    : 9999;
    border     : none;
    padding    : 5px 0 0 0px;
    margin     : 0px 0px 0px -20px;
    display    : none;
    width      : 180px;
    background:transparent url(../i/dropdown-pointer.gif) no-repeat scroll 10px 1px;
}

#squeeze .contextMenu {
    margin     : -95px 0px 0px -275px;
}

#crm-container .contextMenu li,
.crm-contextmenu li {
    background-image: none;
    list-style : none;
    padding    : 3px;
    margin     : 0px;
}

#crm-container .contextMenu a,
.crm-contextmenu a {
    text-decoration     : none;
    display             : block;
    line-height         : 20px;
    height              : 20px;
    background-position : 6px center;
    background-repeat   : no-repeat;
    outline             : none;
    padding             : 0px 0px 1px 5px;
}



/*class for CMS user name check used in profile*/
.cmsmessagebox {
    position    : absolute;
    width       : auto;
    margin-left : 10px;
    padding     : 3px;
}

/* class for text area resizer jquery plugin*/
div.grippie {
    background   : #EEEEEE url('../i/grippie.png') no-repeat scroll center 2px;
    border-color : #DDDDDD;
    border-style : solid;
    border-width : 0pt 1px 1px;
    cursor       : s-resize;
    height       : 9px;
    overflow     : hidden;
}
.resizable-textarea textarea {
    display       : block;
    margin-bottom : 0pt;
    width         : 95%;
    height        : 20%;
}


.crm-tab-button {
    border-bottom:0 none !important;
    float:left;
    margin:0 0.2em 1px 0;
    padding:0;
    position:relative;
    top:1px;
    white-space:nowrap;
}

.ui-tabs .ui-tabs-nav {
    border:none;
    background-image: none;
    padding:4px;
}

.crm-tab-button a,
.ui-tabs .ui-tabs-nav li a, 
.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a,
.ui-tabs .ui-tabs-nav li.ui-tabs-selected a {
    font-size: 0.9em;
}

#mainTabContainer li.crm-tab-button {margin:0 2px 2px 0;}

.ui-tabs .ui-tabs-nav li.ui-tabs-selected { padding-bottom:0px; border:none; }

.crm-tab-button a,
.ui-tabs .ui-tabs-nav li a {
    padding: 5px !important;
}

.crm-tab-button a em {
    color: #3e3e3e;
    font-size: 10px;
    font-style: normal;
}

#crm-container div.ui-accordion-content {
    padding: .5em 1em !important;
}

/* Styles for Contact Summary mockup start here. dgg */
.primary {
    FONT-WEIGHT: bold
}

#crm-container .ui-tabs-panel {
    padding : 4px;
    font-size: 12px;
}

#crm-container div.contactTopBar {
    padding          : 4px;
    LINE-HEIGHT      : 1.4em;
    MARGIN           : 8px 0pt 0px;
    /*FONT-SIZE: 1.1em;*/
    background-color : #eee;
}
#crm-container div.contact_details,
#crm-container div#contactTopBar {
    padding          : 4px;
    LINE-HEIGHT      : 1.4em;
    clear:both;
}
/* ... */

